# array-adhoc

./: README.md  _publish.bash  pyproject.toml
array_adhoc/: cupy.py  numpy.py  torch.py
