[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'array-adhoc'
version = '0.0.1'
description = 'Implements parts of the Python Array API'
readme = 'README.md'
license = {text = 'MIT License'}
classifiers = [
    'Programming Language :: Python :: 3'
]

[project.optional-dependencies]
torch = ['torch']
